--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.3.3
   image_picker: ^1.0.4
+  
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.0
+  firebase_database: ^10.1.0
+
 
 
 dev_dependencies:
