--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,3 +23,11 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.15'
     }
 }
+
+
+dependencies {
+    classpath 'com.google.gms:google-services:latest_version'
+}
+
+
+apply plugin: 'com.google.gms.google-services'
